stop using gcloud

--- a/gyat/Base.lproj/MainMenu.xib
+++ b/gyat/Base.lproj/MainMenu.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11134" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15702" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11134"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15702"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -10,8 +12,8 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application" customClass="NSApplication"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModuleProvider="target">
+        <customObject id="-3" userLabel="Application"/>
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="gyat" customModuleProvider="target">
             <connections>
                 <outlet property="window" destination="QvC-M9-y7g" id="gIp-Ho-8D9"/>
             </connections>
@@ -627,7 +629,7 @@
                             <menuItem title="Show Sidebar" keyEquivalent="s" id="kIP-vf-haE">
                                 <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                 <connections>
-                                    <action selector="toggleSourceList:" target="-1" id="iwa-gc-5KM"/>
+                                    <action selector="toggleSidebar:" target="-1" id="iwa-gc-5KM"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Enter Full Screen" keyEquivalent="f" id="4J7-dP-txa">
@@ -677,16 +679,72 @@
                     </menu>
                 </menuItem>
             </items>
+            <point key="canvasLocation" x="139" y="154"/>
         </menu>
-        <window title="gyat" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g">
+        <window title="gyat" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" animationBehavior="default" id="QvC-M9-y7g" customClass="MainWindow" customModule="gyat" customModuleProvider="target">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-            <rect key="contentRect" x="335" y="390" width="480" height="360"/>
-            <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+            <rect key="contentRect" x="335" y="390" width="534" height="133"/>
+            <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1417"/>
             <view key="contentView" wantsLayer="YES" id="EiT-Mj-1SZ">
-                <rect key="frame" x="0.0" y="0.0" width="480" height="360"/>
+                <rect key="frame" x="0.0" y="0.0" width="534" height="133"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="AzU-mI-QGh">
+                        <rect key="frame" x="16" y="16" width="502" height="101"/>
+                        <subviews>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5Ci-cC-rS2">
+                                <rect key="frame" x="-2" y="77" width="214" height="16"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Google Cloud Vision Access Token" id="OkB-YX-Faa">
+                                    <font key="font" usesAppearanceFont="YES"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="wOo-e1-JrU">
+                                <rect key="frame" x="8" y="48" width="494" height="21"/>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" drawsBackground="YES" id="MZR-Y7-2Xx">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="5Ci-cC-rS2" firstAttribute="top" secondItem="AzU-mI-QGh" secondAttribute="top" constant="8" id="GzU-MX-QTy"/>
+                            <constraint firstAttribute="trailing" secondItem="wOo-e1-JrU" secondAttribute="trailing" id="XxQ-Jz-gWd"/>
+                            <constraint firstItem="wOo-e1-JrU" firstAttribute="leading" secondItem="AzU-mI-QGh" secondAttribute="leading" constant="8" id="eD1-6r-f2m"/>
+                            <constraint firstItem="wOo-e1-JrU" firstAttribute="top" secondItem="5Ci-cC-rS2" secondAttribute="bottom" constant="8" id="tFZ-yc-jRE"/>
+                            <constraint firstItem="5Ci-cC-rS2" firstAttribute="leading" secondItem="AzU-mI-QGh" secondAttribute="leading" id="vIH-ed-vue"/>
+                        </constraints>
+                    </customView>
+                    <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ryU-V9-ODe">
+                        <rect key="frame" x="238" y="9" width="59" height="32"/>
+                        <buttonCell key="cell" type="push" title="OK" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="reh-be-woN">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                            <string key="keyEquivalent" base64-UTF8="YES">
+DQ
+</string>
+                        </buttonCell>
+                        <connections>
+                            <action selector="didTapOK:" target="QvC-M9-y7g" id="EWG-iY-vVg"/>
+                        </connections>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="AzU-mI-QGh" secondAttribute="bottom" constant="16" id="Dgp-Y1-aQD"/>
+                    <constraint firstAttribute="bottom" secondItem="ryU-V9-ODe" secondAttribute="bottom" constant="16" id="anR-TU-1bs"/>
+                    <constraint firstItem="AzU-mI-QGh" firstAttribute="top" secondItem="EiT-Mj-1SZ" secondAttribute="top" constant="16" id="cxg-if-tgZ"/>
+                    <constraint firstItem="AzU-mI-QGh" firstAttribute="leading" secondItem="EiT-Mj-1SZ" secondAttribute="leading" constant="16" id="hbt-fV-NAZ"/>
+                    <constraint firstItem="ryU-V9-ODe" firstAttribute="centerX" secondItem="EiT-Mj-1SZ" secondAttribute="centerX" id="hcv-mU-NaX"/>
+                    <constraint firstAttribute="trailing" secondItem="AzU-mI-QGh" secondAttribute="trailing" constant="16" id="rOs-aI-mIR"/>
+                </constraints>
             </view>
+            <connections>
+                <outlet property="textField" destination="wOo-e1-JrU" id="W5n-4z-Bt5"/>
+            </connections>
+            <point key="canvasLocation" x="166" y="-233.5"/>
         </window>
     </objects>
 </document>
